<resources>
    <string name="app_name">AssignmentBookMyShow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_splash">BookMyShow\nDhanashri\'s Assignment</string>
    <string name="release_date">Release Date:</string>
    <string name="popularity">Popularity</string>
    <string name="language">Language:</string>
    <string name="btn_book">Book</string>
    <string name="duration">Durationm</string>
    <string name="homepage">HomePage</string>
    <string name="genre">Genre</string>
    <string name="overview">Overview</string>
    <string name="reviews">Reviews</string>
</resources>